fix(a11y): increase contrast of code sample punctuation/comments

--- a/client/src/ui/_vars.scss
+++ b/client/src/ui/_vars.scss
@@ -187,10 +187,10 @@ $mdn-theme-light-shadow-01: 0px 1px 2px rgba(43, 42, 51, 0.05);
 $mdn-theme-light-shadow-02: 0px 1px 6px rgba(43, 42, 51, 0.1);
 
 $mdn-theme-light-code-token-tag: $mdn-color-light-theme-blue-60;
-$mdn-theme-light-code-token-punctuation: $mdn-color-neutral-40;
+$mdn-theme-light-code-token-punctuation: $mdn-color-neutral-50;
 $mdn-theme-light-code-token-attribute-name: $mdn-color-light-theme-red-60;
 $mdn-theme-light-code-token-attribute-value: $mdn-color-light-theme-green-60;
-$mdn-theme-light-code-token-comment: $mdn-color-neutral-40;
+$mdn-theme-light-code-token-comment: $mdn-color-neutral-50;
 $mdn-theme-light-code-token-default: $mdn-color-neutral-90;
 $mdn-theme-light-code-token-selector: $mdn-color-light-theme-violet-60;
 $mdn-theme-light-code-background-inline: $mdn-color-neutral-light-80;
@@ -229,10 +229,10 @@ $mdn-theme-dark-field-focus-border: $mdn-color-white;
 $mdn-theme-dark-focus-01: 0px 0px 0px 3px rgba(251, 251, 254, 0.5);
 
 $mdn-theme-dark-code-token-tag: $mdn-color-dark-theme-blue-20;
-$mdn-theme-dark-code-token-punctuation: $mdn-color-neutral-40;
+$mdn-theme-dark-code-token-punctuation: $mdn-color-neutral-30;
 $mdn-theme-dark-code-token-attribute-name: $mdn-color-dark-theme-red-30;
 $mdn-theme-dark-code-token-attribute-value: $mdn-color-dark-theme-green-30;
-$mdn-theme-dark-code-token-comment: $mdn-color-neutral-40;
+$mdn-theme-dark-code-token-comment: $mdn-color-neutral-30;
 $mdn-theme-dark-code-token-default: $mdn-color-white;
 $mdn-theme-dark-code-token-selector: $mdn-color-dark-theme-violet-30;
 $mdn-theme-dark-code-background-inline: $mdn-color-neutral-80;
